# thesis2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: 2.0-asa-streamlit-chatbot.ipynb  3.0-asa-working-notebook.ipynb  notebook_01.ipynb
notebooks/langgraph_github_examples/multi_agent/: agent_supervisor.ipynb  hierarchical_agent_teams.ipynb  multi-agent-collaboration.ipynb
notebooks/langgraph_github_examples/rag/: langgraph_agentic_rag.ipynb  langgraph_crag.ipynb
src/: __init__.py
src/datamodules/: __init__.py  make_dataset.py
src/models/: chatbot_v1.py
src/thesis2024/: AAS.py  PMAS.py  PMAS_notebook.ipynb  TAS.py  TAS_notebook.ipynb  TMAS.py  TMAS_notebook.ipynb  __init__.py  conversation_assessment.py  langmem_quick_start.ipynb  main.py  main_notebook.ipynb  memory.py  sim_conversations.py  tools.py  utils.py
src/thesis2024/datamodules/: crag.py  create_vectorstore.py  load_vectorstore.py  make_dataset.py  retrieval_agent.py
src/thesis2024/evaluation/: AAS_evaluation.py  TAS_evaluation.py  arc_benchmark.py  code_snippets.ipynb  coding_benchmark.py  eval_utils.py  langsmith_eval_experiments.ipynb  sim_conversations.py
src/thesis2024/frontend/: chainlit.md  chainlit_conversational.py  streamlit_chatbot.ipynb
src/thesis2024/models/: AAS.py  SSA.py  __init__.py  agent.py  assessment_agent.py  assessor_agent.py  chatbot_v1.py  coding_agent.py  evaluation_agent.py  examinator_agent.py  memory.py  reflexion_multiagent.py  simulated_student_agent.py  teaching_agent.ipynb  teaching_agent.py
src/thesis2024/multiagent_modules/: coding_agent.py  crag.py  hierarchical_multiagent.py  reflexion_multiagent.py
src/thesis2024/redundant/: 1.0-asa-chatbot-prototype-1.ipynb  TAS_230524.py  TMAS_langgraph.py  arc_benchmark.py  chatbot_v1.py  human_eval_benchmarking.ipynb  langsmith_eval_experiments.ipynb  rag.py  sim_conversations.py  teaching_assistant.ipynb
src/thesis2024/visualizations/: plots1.ipynb  tokenizer.ipynb  visualize.py
src/visualizations/: __init__.py
